--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       const username = document.getElementById("streamerInput").value.trim().toLowerCase();
       if (!username) return;
 
-      const parent = "YOUR_GITHUB_USERNAME.github.io";
+      const parent = "Ziadmust2.github.io";
       const playerFrame = document.getElementById("playerFrame");
       const chatFrame = document.getElementById("chatFrame");
 
