--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
   <main>
     <div class="player">
       <iframe id="playerFrame"
-        src="https://player.twitch.tv/?channel=kai_cenat&parent=Ziadmust2.github.io"
+        src="https://player.twitch.tv/?channel=kai_cenat&parent=ziadmust2.github.io"
         allowfullscreen>
       </iframe>
     </div>
 
     <div class="chat">
       <iframe id="chatFrame"
-        src="https://www.twitch.tv/embed/kai_cenat/chat?parent=Ziadmust2.github.io">
+        src="https://www.twitch.tv/embed/kai_cenat/chat?parent=ziadmust2.github.io">
       </iframe>
     </div>
   </main>
@@ -90,7 +90,7 @@
       const username = document.getElementById("streamerInput").value.trim().toLowerCase();
       if (!username) return;
 
-      const parent = "Ziadmust2.github.io";
+      const parent = "ziadmust2.github.io";
       const playerFrame = document.getElementById("playerFrame");
       const chatFrame = document.getElementById("chatFrame");
 
