--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <title>Twitch Viewer with Search</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       background-color: #0e0e10;
@@ -91,11 +89,10 @@
       if (!username) return;
 
       const parent = "ziadmust2.github.io";
-      const playerFrame = document.getElementById("playerFrame");
-      const chatFrame = document.getElementById("chatFrame");
-
-      playerFrame.src = `https://player.twitch.tv/?channel=${username}&parent=${parent}`;
-      chatFrame.src = `https://www.twitch.tv/embed/${username}/chat?parent=${parent}`;
+      document.getElementById("playerFrame").src = 
+        `https://player.twitch.tv/?channel=${username}&parent=${parent}`;
+      document.getElementById("chatFrame").src = 
+        `https://www.twitch.tv/embed/${username}/chat?parent=${parent}`;
     }
   </script>
 
