--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Twitch Viewer with Search</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       background-color: #0e0e10;
@@ -21,6 +23,7 @@
       gap: 10px;
       align-items: center;
       justify-content: center;
+      flex-wrap: wrap;
     }
     input[type="text"] {
       padding: 8px;
@@ -64,6 +67,7 @@
   <header>
     <input type="text" id="streamerInput" placeholder="Enter Twitch username..." />
     <button onclick="loadStream()">Watch Stream</button>
+    <button onclick="jumpToLive()">Jump to Live</button>
   </header>
 
   <!-- 🖥️ Main Viewer -->
@@ -82,17 +86,26 @@
     </div>
   </main>
 
-  <!-- 🧠 Script to Load Stream -->
+  <!-- 🧠 Script to Load and Jump -->
   <script>
     function loadStream() {
       const username = document.getElementById("streamerInput").value.trim().toLowerCase();
       if (!username) return;
 
       const parent = "ziadmust2.github.io";
-      document.getElementById("playerFrame").src = 
-        `https://player.twitch.tv/?channel=${username}&parent=${parent}`;
-      document.getElementById("chatFrame").src = 
-        `https://www.twitch.tv/embed/${username}/chat?parent=${parent}`;
+      const playerFrame = document.getElementById("playerFrame");
+      const chatFrame = document.getElementById("chatFrame");
+
+      playerFrame.src = `https://player.twitch.tv/?channel=${username}&parent=${parent}`;
+      chatFrame.src = `https://www.twitch.tv/embed/${username}/chat?parent=${parent}`;
+    }
+
+    function jumpToLive() {
+      const iframe = document.getElementById("playerFrame");
+      const currentSrc = iframe.src;
+
+      // Reload the stream iframe to jump to live
+      iframe.src = currentSrc;
     }
   </script>
 
