--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Twitch Viewer with Search</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       background-color: #0e0e10;
+      font-family: sans-serif;
+      color: white;
       display: flex;
       flex-direction: column;
       height: 100vh;
-      font-family: sans-serif;
-      color: white;
     }
     header {
       padding: 10px;
       background-color: #18181b;
       display: flex;
+      flex-wrap: wrap;
       gap: 10px;
-      align-items: center;
       justify-content: center;
+      align-items: center;
     }
     input[type="text"] {
       padding: 8px;
       font-size: 16px;
       border: none;
       border-radius: 4px;
-      width: 300px;
+      width: 250px;
     }
     button {
       padding: 8px 12px;
@@ -44,6 +48,9 @@
       flex-direction: row;
       height: 100%;
     }
+    .player, .chat {
+      height: 100%;
+    }
     .player {
       flex: 1;
     }
@@ -56,17 +63,28 @@
       width: 100%;
       height: 100%;
     }
+
+    /* 📱 Mobile Responsive Layout */
+    @media (max-width: 768px) {
+      main {
+        flex-direction: column;
+      }
+      .chat {
+        width: 100%;
+        height: 300px;
+        border-left: none;
+        border-top: 1px solid #333;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- 🔍 Stream Search Bar -->
   <header>
     <input type="text" id="streamerInput" placeholder="Enter Twitch username..." />
     <button onclick="loadStream()">Watch Stream</button>
   </header>
 
-  <!-- 🖥️ Main Viewer -->
   <main>
     <div class="player">
       <iframe id="playerFrame"
@@ -82,17 +100,17 @@
     </div>
   </main>
 
-  <!-- 🧠 Script to Load Stream -->
   <script>
     function loadStream() {
       const username = document.getElementById("streamerInput").value.trim().toLowerCase();
       if (!username) return;
 
       const parent = "ziadmust2.github.io";
-      document.getElementById("playerFrame").src = 
-        `https://player.twitch.tv/?channel=${username}&parent=${parent}`;
-      document.getElementById("chatFrame").src = 
-        `https://www.twitch.tv/embed/${username}/chat?parent=${parent}`;
+      const playerFrame = document.getElementById("playerFrame");
+      const chatFrame = document.getElementById("chatFrame");
+
+      playerFrame.src = `https://player.twitch.tv/?channel=${username}&parent=${parent}`;
+      chatFrame.src = `https://www.twitch.tv/embed/${username}/chat?parent=${parent}`;
     }
   </script>
 
